--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@testing-library/react": "9.3.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "3.0.1",
-    "testing-library": "0.0.2"
+    "react-scripts": "3.0.1"
   },
   "devDependencies": {
     "typescript": "3.3.3"
